buttons for seeing only online, office, and all twitch streams.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,19 @@
 
 <body>
     <h1>Twitch Streams</h1>
-
-    <p> Browse all the twitch streams </p>
+    <div class='container' id="icons">
+        <div class="bs-glyphicons">
+            <ul class="bs-glyphicons-list">
+                <li>
+                    <span class="glyphicon glyphicon-asterisk">All Streams</span>
+                </li>
+                <li><span class="glyphicon glyphicon-ok">Online</span>
+                </li>
+                <li><span class="glyphicon glyphicon-remove">Offline</span>
+                </li>
+            </ul>
+        </div>
+    </div>
     <div id='streams-table' class="container">
 
     </div>
